<resources>
    <string name="app_name">StudentPlanner</string>
    <string name="student_planner">Student Planner</string>
    <string name="create_new_account">Create new account:</string>
    <string name="full_name">Full Name</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="register">Zarejestruj się</string>
    <string name="dashboard">Dashboard</string>
    <string name="logout">Logout</string>
    <string name="add_subject">Add Subject</string>
    <string name="enter_subject">Enter Subject</string>
    <string name="forgot_password">Zapomniałeś hasła?</string>
    <string name="log_in">Zaloguj się</string>
    <string name="enter_email">Wprowadź e-mail</string>
    <string name="enter_password">Wprowadź hasło</string>
    <string name="login">Logowanie</string>
    <string name="reset">Resetowanie hasła</string>
    <string name="send_link">Wyślij link</string>
    <string name="add_new_field">Dodaj kierunek</string>
    <string name="write_new_field">Podaj nazwę kierunku</string>
    <string name="wyloguj_si">Wyloguj się</string>
    <string name="witaj_w_panelu_g_wnym">Witaj w panelu głównym!</string>
    <string name="twoje_studia">Twoje studia</string>
    <string name="przedmioty">Przedmioty</string>
    <string name="plan_zaj">Plan zajęć</string>
    <string name="do_zrobienia">Do zrobienia</string>
    <string name="dodaj_kierunek">Dodaj kierunek</string>
    <string name="dodaj_przedmiot">Dodaj przedmiot</string>
    <string name="ustawienia">Ustawienia</string>
    <string name="zmie_has_o">Zmień hasło</string>
    <string name="zmie_e_mail">Zmień e-mail</string>
    <string name="tw_j_obecny_e_mail">Twój obecny e-mail:</string>
    <string name="email">email</string>
    <string name="usu_konto">Usuń konto</string>
    <string name="adding_new_subject">Dodawanie nowego przedmiotu</string>
    <string name="subject_name">Nazwa przedmiotu</string>
    <string name="enter">wprowadź</string>
    <string name="form">kierunek</string>
    <string name="ects_points">punkty ECTS</string>
    <string name="extend">Rozszerz +</string>
    <string name="add_new_subject">Dodaj przedmiot</string>
    <string name="current_week">Aktualny tydzień</string>
    <string name="you_have_free_time">Masz wolne</string>
    <string name="text">text</string>
    <string name="to_do">Do zrobienia</string>
    <string name="deadline">Termin wykonania:</string>
    <string name="empty">-</string>
    <string name="subject">Przedmiot:</string>
    <string name="description">Opis:</string>
    <string name="kierunki">Kierunki</string>
    <string name="delete_button">delete button</string>
    <string name="add_homework">add homework</string>
    <string name="narz_dzia">narzędzia</string>
    <string name="samolot_z_papieru">samolot z papieru</string>
    <string name="average_mark">Średnia ocen:</string>
    <string name="not_all_grades">Brak wszystkich ocen</string>
    <string name="subjects">Przedmioty</string>
    <string name="registration">Rejestracja</string>
    <string name="return_to_login">Powrót do logowania</string>
    <string name="ok">OK</string>
    <string name="form_of_subject">Forma przedmiotu</string>
    <string name="day">dzień</string>
    <string name="to">do</string>
    <string name="from">od</string>
    <string name="time">czas</string>
    <string name="hour">godzina</string>
    <string name="how_long">czas trwania</string>
    <string name="beginning">rozpoczęcie</string>
    <string name="subject_form">forma</string>
    <string name="mark">ocena</string>
    <string name="add_achivment">Dodaj osiągnięcie</string>
    <string name="name_of_subject">Nazwa przedmiotu</string>
    <string name="kierunek">Kierunek</string>
    <string name="forms">Formy</string>
    <string name="grades">Oceny</string>
    <string name="add_new_achivment">Dodaj nowe osiągnięcie</string>
    <string name="achivement">osiągnięcie</string>
    <string name="descript">opis</string>
    <string name="add">DODAJ</string>
    <string name="add_new_form">Dodaj nowy kierunek</string>
    <string name="name">nazwa</string>
    <string name="semester">semestr</string>
    <string name="how_many_days">Ile dni przed?</string>
    <string name="reminder">Przypomnienie</string>
    <string name="by_what_time">do jakiej godziny?</string>
    <string name="until_when">do kiedy?</string>
    <string name="add_new_homework">Dodaj nową pracę</string>
    <string name="change">Zmień</string>
    <string name="give_password">Podaj hasło</string>
    <string name="new_mail">Nowy e-mail</string>
    <string name="change_mail">Zmień e-mail</string>
    <string name="change_password">Zmień hasło</string>
    <string name="old_password">Stare hasło</string>
    <string name="new_passord">Nowe hasło</string>
    <string name="repeat_password">Powtórz hasło</string>
    <string name="delete">Usuń</string>
    <string name="delete_account">Usuń konto</string>
    <string name="textview">TextView</string>
    <string name="delete_form">usuń formę</string>
    <string name="chose">wybierz</string>
    <string name="minutes">minuty</string>
    <string name="howlong_time">czas trwania</string>
    <string name="start">rozpoczęcie</string>
    <string name="form_of_sub">Forma przedmiotu</string>
    <string name="line">Line 1</string>
    <string name="delete_subj">usuń</string>
    <string name="hat">czapka</string>
    <string name="line">Line 1</string>
    <string name="line2">Line 2</string>

    <string-array name="formsOfSubject">
        <item>wykład</item>
        <item>ćwiczenia</item>
        <item>seminarium</item>
        <item>spotkanie</item>
        <item>zebranie</item>
        <item>rejestracja</item>
        <item>inne</item>
    </string-array>

    <string-array name="days">
        <item>poniedziałek</item>
        <item>wtorek</item>
        <item>środa</item>
        <item>czwartek</item>
        <item>piątek</item>
        <item>sobota</item>
        <item>niedziela</item>
    </string-array>

</resources>