<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@drawable/bottom_sheet_background"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/slide_bar"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_new_homework"
            android:textSize="20sp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/editTextHomeworkTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textAlignment="center"
            android:textSize="20sp"
            android:maxLength="100"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="5dp"/>

        <EditText
            android:id="@+id/editTextHomeworkDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descript"
            android:textAlignment="center"
            android:textSize="20sp"
            android:maxLength="400"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"/>

        <Spinner
            android:id="@+id/spinnerAddHomeworkSubjects"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="4dp"

            android:layout_marginRight="20dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/rounded_rectangle_all_corners_lightgray"
            android:padding="10dp"></Spinner>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonDeadlinePicker"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:hint="@string/until_when"
                android:inputType="none"
                android:textAlignment="viewStart"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:background="@drawable/rounded_rectangle_all_corners_lightgray"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonDeadlineTimePicker"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:hint="@string/by_what_time"
                android:inputType="none"
                android:textAlignment="viewStart"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="10dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:background="@drawable/rounded_rectangle_all_corners_lightgray"
                />

        </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkboxNotification"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/reminder"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/afterCheckbox"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/how_many_days"
            android:textColor="@color/black"
            android:textSize="15sp" />

    </LinearLayout>



        <com.google.android.material.slider.Slider
            android:id="@+id/sliderReminderDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:value="1"
            android:valueFrom="1"
            android:valueTo="7"
            android:stepSize="1"
            app:haloColor="@color/white"
            app:thumbColor="@color/purple"
            app:tickColor="@color/purple"
            app:trackColor="@color/purple"
            android:visibility="invisible"
            android:layout_marginBottom="0dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAddHomework"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/add_button"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:paddingRight="20dp"
            android:paddingBottom="10dp"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="15sp" />




    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>