<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings"
    android:background="@drawable/gradient_bg">
        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_rectangle_bottom"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/ustawienia"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnChangePass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_purple"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/zmie_has_o"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.307"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnChangeEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/zmie_e_mail"
            android:background="@drawable/rounded_purple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnChangePass"
            app:layout_constraintVertical_bias="0.031"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="2dp"
            android:text="@string/tw_j_obecny_e_mail"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/textView_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.151"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints,UnknownIdInLayout" />

        <TextView
            android:id="@+id/editTextMail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/white_solid"
            android:paddingTop="12dp"
            android:paddingBottom="10dp"
            android:text="@string/email"
            android:textAlignment="center"
            android:textColor="@color/purple"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="0.015"
            tools:ignore="MissingConstraints" />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDeleteAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/usu_konto"
        android:textColor="@color/white"
        android:background="@drawable/rounded_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChangePass"
        app:layout_constraintVertical_bias="0.858"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>